# gpui-ce

./: .gitignore  Cargo.toml  deny.toml  opencode.json
.github/workflows/: ci.yml
crates/collections/: Cargo.toml
crates/derive_refineable/: Cargo.toml
crates/derive_refineable/src/: derive_refineable.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/bench/: data_table.rs  paths_bench.rs  pattern.rs  shadow.rs
crates/gpui/examples/common/: mod.rs
crates/gpui/examples/learn/: animation.rs  async_tasks.rs  creating_components.rs  custom_drawing.rs  interactive_elements.rs  layout.rs  styling.rs  text.rs
crates/gpui/examples/legacy/: focus_visible.rs  gif_viewer.rs  gradient.rs  hello_world.rs  image_loading.rs  input.rs  layer_shell.rs  on_window_close_quit.rs  opacity.rs  scrollable.rs  tab_stop.rs  tree.rs  uniform_list.rs  window.rs  window_positioning.rs  window_shadow.rs
crates/gpui/examples/legacy/image/: image.rs
crates/gpui/examples/legacy/svg/: svg.rs
crates/gpui/src/: app.rs  bounds_tree.rs  geometry.rs  gpui.rs  interactive.rs  key_dispatch.rs  keymap.rs  platform.rs  platform_scheduler.rs  queue.rs  scene.rs  style.rs  subscription.rs  svg_renderer.rs  tab_stop.rs  text_system.rs  util.rs  view.rs  window.rs
crates/gpui/src/app/: headless_app_context.rs  test_app.rs  test_context.rs  visual_test_context.rs
crates/gpui/src/elements/: div.rs
crates/gpui/src/platform/: visual_test.rs
crates/gpui/src/platform/test/: platform.rs  window.rs
crates/gpui/src/text_system/: line_layout.rs
crates/gpui_ce_util/: Cargo.toml
crates/gpui_derive_refineable/: Cargo.toml
crates/gpui_elements/: Cargo.toml
crates/gpui_elements/examples/: editable_text.rs
crates/gpui_elements/src/: editable_text.rs  input.rs
crates/gpui_elements/src/editable_text/: actions.rs  caret.rs  element.rs  history.rs  input_element.rs  input_state.rs  shared_element.rs  shared_state.rs  state.rs  storage.rs  text_area_element.rs  text_area_state.rs
crates/gpui_elements/src/input/: colors.rs  cursor.rs  element.rs  layout.rs  paint.rs  state.rs  state_input_handler.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_linux/src/: gpui_linux.rs
crates/gpui_linux/src/linux/: dispatcher.rs  platform.rs
crates/gpui_linux/src/linux/headless/: client.rs
crates/gpui_linux/src/linux/wayland/: client.rs  serial.rs  window.rs
crates/gpui_linux/src/linux/x11/: client.rs  clipboard.rs  window.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: dispatcher.rs  gpui_macos.rs  keyboard.rs  metal_atlas.rs  metal_renderer.rs  pasteboard.rs  platform.rs  shaders.metal  text_system.rs
crates/gpui_macros/src/: derive_inspector_reflection.rs  gpui_macros.rs  util_macros.rs
crates/gpui_macros/tests/: derive_inspector_reflection.rs
crates/gpui_media/: Cargo.toml
crates/gpui_platform/: Cargo.toml
crates/gpui_scheduler/: Cargo.toml
crates/gpui_shared_string/: Cargo.toml
crates/gpui_sum_tree/: Cargo.toml
crates/gpui_util/: Cargo.toml
crates/gpui_util/src/: gpui_util.rs
crates/gpui_web/: Cargo.toml
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/benches/: layout_line.rs
crates/gpui_wgpu/src/: cosmic_text_system.rs  gpui_wgpu.rs  wgpu_atlas.rs  wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_windows/src/: clipboard.rs  direct_write.rs  directx_atlas.rs  directx_devices.rs  directx_renderer.rs  dispatcher.rs  display.rs  gpui_windows.rs  platform.rs  util.rs  vsync.rs
crates/gpui_zed_util/: Cargo.toml
crates/media/: Cargo.toml
crates/refineable/: Cargo.toml
crates/scap/: Cargo.toml
crates/scap/src/: lib.rs
crates/scap/src/capturer/engine/: mod.rs
crates/scap/src/capturer/engine/linux/: mod.rs
crates/scap/src/capturer/engine/linux/wayland/: mod.rs  portal.rs
crates/scap/src/capturer/engine/linux/x11/: mod.rs
crates/scap/src/capturer/engine/win/: mod.rs
crates/scap/src/targets/: mod.rs
crates/scap/src/targets/linux/: mod.rs
crates/scheduler/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: sum_tree.rs
crates/util/: Cargo.toml
crates/util/src/: shell.rs  util.rs
crates/xim/: Cargo.toml
crates/xim/src/: client.rs  x11rb.rs  xlib.rs
crates/xim/src/server/: connection.rs
crates/xim_ctext/: Cargo.toml
crates/xim_ctext/src/: lib.rs
crates/xim_parser/: Cargo.toml
src/: action.rs  app.rs  executor.rs  geometry.rs  gpui.rs  interactive.rs  key_dispatch.rs  keymap.rs  local_util.rs  path_builder.rs  platform.rs  profiler.rs  scene.rs  style.rs  subscription.rs  svg_renderer.rs  taffy.rs  text_system.rs  window.rs
src/app/: context.rs  entity_map.rs  headless_app_context.rs
src/collections/: collections.rs
src/elements/: div.rs  img.rs  list.rs  svg.rs  text.rs
src/platform/: scap_screen_capture.rs  windows.rs
src/platform/linux/: dispatcher.rs  platform.rs
src/platform/linux/headless/: client.rs
src/platform/linux/wayland/: client.rs  cursor.rs  serial.rs  window.rs
src/platform/linux/x11/: client.rs  clipboard.rs  window.rs
src/platform/mac/: dispatcher.rs  keyboard.rs  metal_atlas.rs  pasteboard.rs  platform.rs  screen_capture.rs  text_system.rs  window.rs
src/platform/test/: window.rs
src/platform/wgpu/: cosmic_text_system.rs  wgpu_atlas.rs  wgpu_context.rs
src/platform/windows/: clipboard.rs  direct_write.rs  directx_atlas.rs  directx_renderer.rs  dispatcher.rs  display.rs  events.rs  keyboard.rs  platform.rs  util.rs  window.rs
src/refineable/: derive_refineable.rs  refineable.rs
src/scheduler/: mod.rs  test_scheduler.rs  tests.rs
src/sum_tree/: cursor.rs  sum_tree.rs  tree_map.rs
src/text_system/: line_layout.rs  line_wrapper.rs
src/util/: lib.rs  util_macros.rs
tooling/perf/: Cargo.toml
tooling/perf/src/: implementation.rs  main.rs
tooling/xtask/: Cargo.toml
tooling/xtask/src/tasks/: publish_gpui.rs
