[workspace]
members = [
    "./crates/gpui/",
    "./crates/gpui_web/",
    "./crates/gpui_wgpu/",
    "./crates/gpui_linux/",
    "./crates/gpui_macos/",
    "./crates/gpui_tokio/",
    "./crates/gpui_macros/",
    "./crates/gpui_windows/",
    "./crates/gpui_platform/",
    "./crates/gpui_shared_string/",
    "./crates/collections/",
    "./crates/scheduler/",
    "./crates/sum_tree/",
    "./crates/gpui_util/",
    "./crates/refineable/",
    "./crates/derive_refineable/",
    "./crates/scap/",
    "./crates/xim/",
    "./crates/xim_parser/",
    "./crates/xim_ctext/",
    "./crates/util/",
    "./crates/media/",
    "./crates/gpui_elements/",
    "./tooling/perf/",
]
default-members = [
    "./crates/gpui/",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "A community fork of Zed's GPU-accelerated UI framework"
publish = true
license = "Apache-2.0"
homepage = "https://gpui-ce.github.io/"
readme = "README.md"
rust-version = "1.96"

[workspace.dependencies]
accesskit = "0.24.0"
accesskit_macos = "0.26.1"
accesskit_unix = "0.21.1"
accesskit_windows = "0.33.0"
anyhow = "1.0.102"
backtrace = "0.3"
bitflags = { version = "2.13.0", default-features = false }
collections = { path = "./crates/collections/" }
ctor = "1.0.7"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dunce = "1.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "2.6"
http_client = { package = "http-client-gpui-unofficial", version = "1.2.7" }
image = "0.25.10"
inventory = "0.3.24"
itertools = "0.14.0"
log = { version = "0.4.32", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12.5"
postage = { version = "0.5", features = ["futures-traits"] }
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
chrono = { version = "0.4", features = ["serde"] }
profiling = "1"
rand = "0.10.1"
regex = "1.12"
refineable = { path = "./crates/refineable/" }
scheduler = { path = "./crates/scheduler/" }
schemars = { version = "1.2.1", features = ["indexmap2"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "raw_value"] }
slotmap = "1.1.1"
smallvec = { version = "1.15", features = ["union", "const_new"] }
async-channel = "2.5.0"
stacksafe = "1.0.2"
strum = { version = "0.28.0", features = ["derive"] }
sum_tree = { path = "./crates/sum_tree/" }
thiserror = "2.0.18"
hdrhistogram = "7"
pollster = "0.4.0"
url = "2.5"
uuid = { version = "1.23.3", features = ["v4", "v5", "v7", "serde"] }
web-time = "1.1.0"
cocoa = "=0.26.1"
cocoa-foundation = "=0.2.1"
core-foundation = "0.10"
core-foundation-sys = "0.8.7"
core-video = { version = "0.6.1", features = ["metal"] }
media = { path = "./crates/media/" }
objc = "0.2"
mach2 = "0.6"
metal = "0.33.0"
scap = { path = "./crates/scap/", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
env_logger = "0.11.10"
unicode-segmentation = "1.13.3"
wasm-bindgen = "0.2.123"
heck = "0.5"
proc-macro2 = "1.0.106"
syn = { version = "2.0.117", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0.45"
ashpd = { version = "0.13.11", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
libc = "0.2"
smol = "2.0.2"
util = { path = "./crates/util/" }
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
criterion = { version = "0.8.2", features = ["html_reports"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [ "NSGraphics" ] }
semver = { version = "1.0", features = ["serde"] }
windows-core = "0.62.2"
tokio = { version = "1" }
gpui_util = { path = "./crates/gpui_util/" }
xim = { path = "./crates/xim/", package = "zed-xim" }

ahash = { version = "0.8", default-features = false }
annotate-snippets = "0.12.16"
as-raw-xcb-connection = "1"
async-task = "4.7"
bindgen = "0.72"
block = "0.1"
bytemuck = "1"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
cargo_metadata = "0.23.1"
cargo_toml = "0.22.3"
cbindgen = { version = "0.29.4", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
core-graphics = "0.25"
core-graphics-helmer-fork = "0.24.0"
core-text = "22"
cosmic-text = "0.19.0"
dbus = "0.9.11"
dispatch2 = "0.3.1"
embed-resource = "3.0"
encoding_rs = "0.8.35"
etagere = "0.3"
filedescriptor = "0.8.3"
flume = "0.12"
font-kit = { git = "https://github.com/Havunen/font-kit", rev = "cc6f86949e40ef3a5e9b2063f8127cdcb72d7ac4", package = "font-kit", version = "0.14.3-1" }
foreign-types = "0.5"
getrandom = "0.4.2"
gh-workflow = "0.8.1"
hashbrown = { version = "0.17.1", default-features = false }
heapless = "0.9.3"
indexmap = "2.14.0"
indoc = "2.0.7"
js-sys = "0.3"
lyon = "1.0"
num_cpus = "1.17"
objc2 = "0.6"
objc2-metal = "0.3"
oo7 = { version = "0.6.0", default-features = false }
open = "5.3.5"
parking = "2.2.1"
pathfinder_geometry = "0.5"
pin-project = "1.1.13"
pipewire = "0.10.0"
raw-window-handle = "0.6"
rayon = "1.12.0"
resvg = { version = "0.47.0", default-features = false }
rustc-hash = "2.1.2"
screencapturekit = { version = "7.0.1", features = ["macos_14_0"] }
screencapturekit-sys = "0.2.8"
seahash = "4.1"
serde_yaml = "0.9.34"
smol_str = "0.3.6"
spin = "0.12.0"
swash = "0.2.8"
sysinfo = "0.39.3"
taffy = "=0.10.1"
tao-core-video-sys = "0.2.0"
toml = "1.1.2"
toml_edit = "0.25.12"
ttf-parser = "0.25"
usvg = { version = "0.47.0", default-features = false }
waker-fn = "1.2.0"
wasm-bindgen-futures = "0.4"
wasm_thread = "0.3"
wayland-backend = "0.3.15"
wayland-client = "0.31.14"
wayland-cursor = "0.31.14"
wayland-protocols = "0.32.12"
wayland-protocols-plasma = "0.3.12"
wayland-protocols-wlr = "0.3.12"
web-sys = "0.3"
windows-capture = "2.0.0"
windows-numerics = "0.3.1"
windows-registry = "0.6.1"
x11 = "2.21.0"
x11-clipboard = "0.9.3"
x11-dl = "2.21.0"
x11rb = "0.13.2"
xcb = "1.7.0"
xkbcommon = "0.9.0"

gpui = { path = "./crates/gpui/" }
gpui_platform = { path = "./crates/gpui_platform/" }
gpui_linux = { path = "./crates/gpui_linux/" }
gpui_macos = { path = "./crates/gpui_macos/" }
gpui_windows = { path = "./crates/gpui_windows/" }
gpui_web = { path = "./crates/gpui_web/" }

gpui_wgpu = { path = "./crates/gpui_wgpu/" }

gpui_macros = { path = "./crates/gpui_macros/" }
gpui_shared_string = { path = "./crates/gpui_shared_string/" }
gpui_tokio = { path = "./crates/gpui_tokio/" }

[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
