[workspace]
members = [
    "./crates/gpui/",
    "./crates/gpui_web/",
    "./crates/gpui_wgpu/",
    "./crates/gpui_linux/",
    "./crates/gpui_macos/",
    "./crates/gpui_tokio/",
    "./crates/gpui_macros/",
    "./crates/gpui_windows/",
    "./crates/gpui_platform/",
    "./crates/gpui_shared_string/",
    "./crates/collections/",
    "./crates/scheduler/",
    "./crates/sum_tree/",
    "./crates/gpui_util/",
    "./crates/refineable/",
    "./crates/derive_refineable/",
    "./crates/xim/",
    "./crates/xim_parser/",
    "./crates/xim_ctext/",
    "./crates/util/",
    "./crates/media/",
    "./crates/gpui_elements/",
    "./crates/gpui_collections/",
    "./crates/gpui_refineable/",
    "./crates/gpui_derive_refineable/",
    "./crates/gpui_scheduler/",
    "./crates/gpui_sum_tree/",
    "./crates/gpui_media/",
    "./crates/gpui_zed_util/",
    "./crates/gpui_ce_util/",
    "./tooling/perf/",
]
default-members = ["./crates/gpui/"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "A community fork of Zed's GPU-accelerated UI framework"
publish = true
license = "Apache-2.0"
homepage = "https://gpui-ce.github.io/"
readme = "README.md"
rust-version = "1.97"

[workspace.dependencies]
accesskit = "0.24.1"
accesskit_macos = "0.26.2"
accesskit_unix = "0.22.0"
accesskit_windows = "0.33.1"
anyhow = "1.0.103"
backtrace = "0.3"
bitflags = { version = "2.13.0", default-features = false }
collections = { path = "./crates/collections/" }
ctor = "1.0.8"
derive_more = { version = "2.1.1", features = [
  "add",
  "add_assign",
  "deref",
  "deref_mut",
  "display",
  "from_str",
  "mul",
  "mul_assign",
  "not",
] }
dunce = "1.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "2.6"
http = "1"
image = "0.25.10"
inventory = "0.3.24"
itertools = "0.15.0"
log = { version = "0.4.33", features = ["serde"] }
parking_lot = "0.12.5"
postage = { version = "0.5", features = ["futures-traits"] }
proptest = { version = "1.10", features = ["attr-macro"] }
chrono = { version = "0.4", features = ["serde"] }
profiling = "1"
rand = "0.10.2"
regex = "1.13"
refineable = { path = "./crates/refineable/" }
scheduler = { path = "./crates/scheduler/" }
schemars = { version = "1.2.1", features = ["indexmap2"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
slotmap = "1.1.1"
smallvec = { version = "1.15", features = ["union", "const_new"] }
async-channel = "2.5.0"
stacksafe = "1.0.2"
strum = { version = "0.28.0", features = ["derive"] }
sum_tree = { path = "./crates/sum_tree/" }
thiserror = "2.0.18"
hdrhistogram = "7"
pollster = "1"
url = "2.5"
uuid = { version = "1.23.4", features = ["v4", "v5", "serde"] }
web-time = "1.1.0"
cocoa = "=0.26.1"
cocoa-foundation = "=0.2.1"
core-foundation = "0.10"
core-foundation-sys = "0.8.7"
core-video = { version = "0.6.1", features = ["metal"] }
media = { path = "./crates/media/" }
objc = "0.2"
mach2 = "0.6"
metal = "0.33.0"
env_logger = "0.11.11"
unicode-segmentation = "1.13.3"
wasm-bindgen = "0.2.126"
scap = { version = "0.0.8-zed", package = "zed-scap", default-features = false }
heck = "0.5"
proc-macro2 = "1.0.106"
syn = { version = "2.0.118", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0.46"
ashpd = { version = "0.13.12", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
libc = "0.2"
smol = "2.0.2"
util = { path = "./crates/util/" }
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
criterion = { version = "0.8.2", features = ["html_reports"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [ "NSGraphics" ] }
semver = { version = "1.0", features = ["serde"] }
windows-core = "0.62.2"
tokio = { version = "1" }
gpui_util = { path = "./crates/gpui_util/" }
xim = { path = "./crates/xim/", package = "zed-xim" }

ahash = { version = "0.8", default-features = false }
annotate-snippets = "0.12.16"
as-raw-xcb-connection = "1"
async-task = "4.7"
bindgen = "0.72"
block = "0.1"
bytemuck = "1"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
cargo_metadata = "0.23.1"
cargo_toml = "1"
cbindgen = { version = "0.29.4", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
core-graphics = "0.25"
core-text = "22"
cosmic-text = "0.19.0"
dispatch2 = "0.3.1"
embed-resource = "3.0"
encoding_rs = "0.8.35"
etagere = "0.3"
filedescriptor = "0.8.3"
flume = "0.12"
font-kit = { git = "https://github.com/Havunen/font-kit", rev = "cc6f86949e40ef3a5e9b2063f8127cdcb72d7ac4", package = "font-kit", version = "0.14.3-1" }
foreign-types = "0.5"
getrandom = "0.4.3"
gh-workflow = "0.8.1"
hashbrown = { version = "0.17.1", default-features = false }
heapless = "0.9.3"
indexmap = "2.14.0"
indoc = "2.0.7"
js-sys = "0.3"
lyon = "1.0"
num_cpus = "1.17"
objc2 = "0.6"
objc2-metal = "0.3"
oo7 = { version = "0.6.0", default-features = false }
open = "5.4.0"
parking = "2.2.1"
pathfinder_geometry = "0.5"
pin-project = "1.1.13"
raw-window-handle = "0.6"
rayon = "1.12.0"
resvg = { version = "0.47.0", default-features = false }
rustc-hash = "2.1.3"
seahash = "4.1"
serde_yaml = "0.9.34"
smol_str = "0.3.6"
spin = "0.12.1"
swash = "0.2.9"
taffy = { version = "=0.12.1", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "calc", "content_size", "detailed_layout_info"] }
toml = "1.1.2"
toml_edit = "0.25.12"
ttf-parser = "0.25"
usvg = { version = "0.47.0", default-features = false }
waker-fn = "1.2.0"
wasm-bindgen-futures = "0.4"
wasm_thread = "0.3"
wayland-backend = "0.3.15"
wayland-client = "0.31.14"
wayland-cursor = "0.31.14"
wayland-protocols = "0.32.13"
wayland-protocols-plasma = "0.3.12"
wayland-protocols-wlr = "0.3.12"
web-sys = "0.3"
windows-numerics = "0.3.1"
windows-registry = "0.6.1"
x11 = "2.21.0"
x11-clipboard = "0.9.3"
x11-dl = "2.21.0"
x11rb = "0.13.2"
xkbcommon = "0.9.0"

gpui = { path = "./crates/gpui/", version = "0.2.2" }
gpui_platform = { path = "./crates/gpui_platform/", version = "0.1.0" }
gpui_linux = { path = "./crates/gpui_linux/", version = "0.1.0" }
gpui_macos = { path = "./crates/gpui_macos/", version = "0.1.0" }
gpui_windows = { path = "./crates/gpui_windows/", version = "0.1.0" }
gpui_web = { path = "./crates/gpui_web/", version = "0.1.0" }

gpui_wgpu = { path = "./crates/gpui_wgpu/", version = "0.1.0" }

gpui_macros = { path = "./crates/gpui_macros/", version = "0.1.0" }
gpui_shared_string = { path = "./crates/gpui_shared_string/", version = "0.1.0" }
gpui_tokio = { path = "./crates/gpui_tokio/", version = "0.1.0" }

[workspace.dependencies.windows]
version = "0.62.2"
features = [
  "Foundation_Numerics",
  "Globalization_DateTimeFormatting",
  "Storage_Search",
  "Storage_Streams",
  "System_Threading",
  "UI_ViewManagement",
  "Wdk_System_SystemServices",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_DirectManipulation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Hlsl",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Performance",
  "Win32_System_Pipes",
  "Win32_System_RestartManager",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WinRT",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
