[package]
name = "collections"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/collections.rs"

[features]
test-support = []

[dependencies]
indexmap.workspace = true
rustc-hash.workspace = true
gpui_util.workspace = true
