[package]
name = "gpui"
version = "0.2.2"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "Zed's GPU-accelerated UI framework"
repository = "https://github.com/zed-industries/zed"
publish = true
license = "Apache-2.0"
homepage = "https://gpui.rs"
readme = "README.md"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]


[lints]
workspace = true

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = [
  "leak-detection",
  "collections/test-support",
  "wayland",
  "x11",
  "proptest",
]
inspector = ["gpui_macros/inspector"]
leak-detection = ["backtrace"]
wayland = [
    "bitflags",
]
x11 = []
windows-manifest = ["dep:embed-resource"]
input-latency-histogram = ["dep:hdrhistogram"]

[lib]
path = "src/gpui.rs"
doctest = false

[dependencies]
accesskit.workspace = true
anyhow.workspace = true
async-task.workspace = true
backtrace = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }

collections.workspace = true
ctor.workspace = true
derive_more.workspace = true
etagere.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
gpui_macros.workspace = true
gpui_shared_string.workspace = true
http.workspace = true
image.workspace = true
inventory.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
parking.workspace = true
parking_lot.workspace = true
postage.workspace = true
proptest = { workspace = true, optional = true }
chrono.workspace = true
profiling.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
regex.workspace = true
refineable.workspace = true
scheduler.workspace = true
resvg = { workspace = true, default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images"
] }
usvg = { workspace = true, default-features = false }
ttf-parser.workspace = true
schemars.workspace = true
seahash.workspace = true
serde.workspace = true
serde_json.workspace = true
slotmap.workspace = true
smallvec.workspace = true
async-channel.workspace = true
stacksafe.workspace = true
strum.workspace = true
sum_tree.workspace = true
taffy.workspace = true
thiserror.workspace = true
gpui_util.workspace = true
hdrhistogram = { workspace = true, optional = true }
waker-fn.workspace = true
lyon.workspace = true
pin-project.workspace = true
spin.workspace = true
pollster.workspace = true
url.workspace = true
uuid.workspace = true
web-time.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }


[target.'cfg(target_os = "macos")'.dependencies]
block.workspace = true
cocoa.workspace = true
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics.workspace = true
core-video.workspace = true
core-text.workspace = true
font-kit = { workspace = true, optional = true, features = ["freetype-bundled"] }
foreign-types.workspace = true
log.workspace = true
media.workspace = true
objc.workspace = true
objc2 = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
mach2.workspace = true
#TODO: replace with "objc2"
metal.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
pathfinder_geometry.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation"] }


[dev-dependencies]
backtrace.workspace = true
smol.workspace = true
collections = { workspace = true, features = ["test-support"] }
env_logger.workspace = true
gpui_platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
gpui_util = { workspace = true }
lyon = { workspace = true, features = ["extra"] }
proptest = { workspace = true }
rand.workspace = true
scheduler = { workspace = true, features = ["test-support"] }
unicode-segmentation = { workspace = true }


[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen = { workspace = true }
gpui_web.workspace = true

[build-dependencies]
embed-resource = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen.workspace = true
cbindgen = { workspace = true, default-features = false }


# ============================================================================
# Learn Examples - Educational examples for learning GPUI
# ============================================================================

[[example]]
name = "interactive_elements"
path = "examples/learn/interactive_elements.rs"

[[example]]
name = "creating_components"
path = "examples/learn/creating_components.rs"

[[example]]
name = "layout"
path = "examples/learn/layout.rs"

[[example]]
name = "styling"
path = "examples/learn/styling.rs"

[[example]]
name = "async_tasks"
path = "examples/learn/async_tasks.rs"

[[example]]
name = "custom_drawing"
path = "examples/learn/custom_drawing.rs"

[[example]]
name = "animation"
path = "examples/learn/animation.rs"

[[example]]
name = "text"
path = "examples/learn/text.rs"

[[example]]
name = "transition"
path = "examples/learn/transition.rs"

[[example]]
name = "blur"
path = "examples/learn/blur.rs"

[[example]]
name = "keyring"
path = "examples/learn/keyring.rs"

# ============================================================================
# Bench Examples - Performance benchmarks
# ============================================================================

[[example]]
name = "data_table"
path = "examples/bench/data_table.rs"

[[example]]
name = "paths_bench"
path = "examples/bench/paths_bench.rs"

[[example]]
name = "pattern"
path = "examples/bench/pattern.rs"

[[example]]
name = "shadow"
path = "examples/bench/shadow.rs"

# ============================================================================
# Legacy Examples - Original examples (to be updated)
# ============================================================================

[[example]]
name = "focus_visible"
path = "examples/legacy/focus_visible.rs"

[[example]]
name = "gif_viewer"
path = "examples/legacy/gif_viewer.rs"

[[example]]
name = "gradient"
path = "examples/legacy/gradient.rs"

[[example]]
name = "hello_world"
path = "examples/legacy/hello_world.rs"

[[example]]
name = "image_loading"
path = "examples/legacy/image_loading.rs"

[[example]]
name = "input"
path = "examples/legacy/input.rs"

[[example]]
name = "layer_shell"
path = "examples/legacy/layer_shell.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/legacy/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/legacy/opacity.rs"

[[example]]
name = "scrollable"
path = "examples/legacy/scrollable.rs"

[[example]]
name = "svg"
path = "examples/legacy/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/legacy/tab_stop.rs"

[[example]]
name = "tree"
path = "examples/legacy/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/legacy/uniform_list.rs"

[[example]]
name = "window"
path = "examples/legacy/window.rs"

[[example]]
name = "window_positioning"
path = "examples/legacy/window_positioning.rs"

[[example]]
name = "window_shadow"
path = "examples/legacy/window_shadow.rs"
