[package]
name = "gpui_linux"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_linux.rs"

[features]
default = ["wayland", "x11"]
test-support = ["gpui/test-support"]
wayland = [
    "bitflags",
    "gpui_wgpu",
    "ashpd/wayland",

    "calloop-wayland-source",
    "wayland-backend",
    "wayland-client",
    "wayland-cursor",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "wayland-protocols-wlr",
    "filedescriptor",
    "xkbcommon",
    "open",
    "gpui/wayland",
]
x11 = [
    "gpui_wgpu",
    "ashpd",

    "as-raw-xcb-connection",
    "x11rb",
    "xkbcommon",
    "xim",
    "x11-clipboard",
    "filedescriptor",
    "open",
    "scap?/x11",
]
screen-capture = [
    "gpui/screen-capture",
    "scap",
]


[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
accesskit.workspace = true
accesskit_unix.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
collections.workspace = true
image.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_wgpu = { workspace = true, optional = true, features = ["font-kit"] }
http_client.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
parking_lot.workspace = true
pathfinder_geometry.workspace = true
pollster.workspace = true
profiling.workspace = true
smallvec.workspace = true
smol.workspace = true
strum.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true

# Always used
oo7 = { workspace = true, default-features = false, features = [
    "async-std",
    "native_crypto",
] }
calloop.workspace = true
raw-window-handle.workspace = true

# Used in both windowing options
ashpd = { workspace = true, optional = true }
swash.workspace = true
bitflags = { workspace = true, optional = true }
filedescriptor = { workspace = true, optional = true }
open = { workspace = true, optional = true }
xkbcommon = { workspace = true, features = ["wayland", "x11"], optional = true }

# Screen capture
scap = { workspace = true, optional = true }

# Wayland
calloop-wayland-source = { workspace = true, optional = true }
wayland-backend = { workspace = true, features = [
    "client_system",
    "dlopen",
], optional = true }
wayland-client = { workspace = true, optional = true }
wayland-cursor = { workspace = true, optional = true }
wayland-protocols = { workspace = true, features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-protocols-plasma = { workspace = true, features = [
    "client",
], optional = true }
wayland-protocols-wlr = { workspace = true, features = [
    "client",
], optional = true }

# X11
as-raw-xcb-connection = { workspace = true, optional = true }
x11rb = { workspace = true, features = [
    "allow-unsafe-code",
    "xkb",
    "randr",
    "xinput",
    "cursor",
    "resource_manager",
    "sync",
    "dri3",
], optional = true }
xim = { workspace = true, features = [
    "x11rb-xcb",
    "x11rb-client",
], optional = true }
x11-clipboard = { workspace = true, optional = true }
