[package]
name = "gpui_macos"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_macos.rs"

[features]
default = ["gpui/default"]
test-support = ["gpui/test-support"]
runtime_shaders = []
font-kit = ["dep:font-kit"]

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
accesskit.workspace = true
accesskit_macos.workspace = true
anyhow.workspace = true
async-task.workspace = true
block.workspace = true
cocoa.workspace = true
collections.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics.workspace = true
core-text.workspace = true
core-video.workspace = true
ctor.workspace = true
derive_more.workspace = true
dispatch2.workspace = true
etagere.workspace = true
font-kit = { workspace = true, optional = true, features = ["freetype-bundled"] }
foreign-types.workspace = true
futures.workspace = true
image.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
mach2.workspace = true
media.workspace = true
metal.workspace = true
objc.workspace = true
objc2-app-kit.workspace = true
parking_lot.workspace = true
pathfinder_geometry.workspace = true
raw-window-handle.workspace = true
semver.workspace = true
smallvec.workspace = true
strum.workspace = true
util.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { workspace = true, default-features = false }
gpui.workspace = true

# When this crate is itself being tested (cargo test -p gpui_macos), its own
# cfg(test) flag enables impls of test-only traits like PlatformHeadlessRenderer
# and PlatformWindow::render_to_image. Those traits/methods only exist in gpui
# when gpui's `test-support` feature is on, so we have to turn that feature on
# as a dev-dependency. The `cfg(test)` flag of a dependent crate doesn't
# propagate to its dependencies, but dev-dependencies do, so this is the
# correct way to enable the feature exactly when needed.
[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
