[package]
name = "gpui_media"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
publish = true
description = "macOS CoreMedia/CoreVideo bindings for gpui-ce (vendored from Zed)."

[lib]
name = "media"
path = "src/media.rs"
doctest = false

[dependencies]
anyhow = "1.0.104"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.10.1"
ctor = "1.0.10"
foreign-types = "0.5"
metal = "0.33"
core-video = { version = "0.6.1", features = ["metal"] }
objc = "0.2"

[build-dependencies]
bindgen = "0.72"
