[package]
name = "refineable"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
description = "Traits and derive macro for hierarchical refinement"

[lints]
workspace = true

[lib]
path = "src/refineable.rs"

[dependencies]
derive_refineable = { path = "../derive_refineable" }