[package]
name = "zed-scap"
description = "Modern, high-performance screen capture library for Rust. Cross-platform."
version = "0.0.8-zed"
edition.workspace = true
publish = false
license.workspace = true
authors = [
    "Siddharth <siddharth99c@gmail.com>",
    "Pranav <pranav2000joglekar@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/helmerapp/scap"
documentation = "https://docs.rs/scap"
keywords = ["screen", "recording", "video", "capture", "media"]
categories = ["graphics", "multimedia", "multimedia::video"]

[lints]
workspace = true

[features]
default = ["x11"]
wayland = ["dep:pipewire", "dep:dbus"]
x11 = ["dep:xcb", "dep:x11"]

[dependencies]
anyhow.workspace = true
log.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tao-core-video-sys.workspace = true
core-graphics-helmer-fork.workspace = true
screencapturekit.workspace = true
screencapturekit-sys.workspace = true
cocoa.workspace = true
objc.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rand.workspace = true
xcb = { workspace = true, features = ["randr", "xlib_xcb", "xfixes"], optional = true }
x11 = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
dbus = { workspace = true, optional = true }
