[package]
name = "scheduler"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/scheduler.rs"

[features]
test-support = []

[dependencies]
async-task.workspace = true
backtrace.workspace = true
chrono.workspace = true
flume.workspace = true
futures.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
web-time.workspace = true

[dev-dependencies]
parking_lot.workspace = true
