[package]
name = "sum_tree"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/sum_tree.rs"

[features]
test-support = ["proptest"]

[dependencies]
heapless.workspace = true
rayon.workspace = true
log.workspace = true
profiling.workspace = true
proptest = { workspace = true, optional = true }

[dev-dependencies]
ctor.workspace = true
rand.workspace = true
proptest.workspace = true
env_logger.workspace = true
