[package]
name = "util"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
description = "Platform utilities used by GPUI platform implementations"

[lints]
workspace = true

[lib]
path = "src/util.rs"

[dependencies]
anyhow.workspace = true
futures-lite.workspace = true
gpui_util = { path = "../gpui_util" }
log.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
smol.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
smol.workspace = true
mach2.workspace = true
libc.workspace = true